Database and Collection from configuration

--- a/notifications/appsettings.json
+++ b/notifications/appsettings.json
@@ -6,11 +6,15 @@
     }
   },
   "CosmosDB": {
+    "DatabaseName": "pxdraw",
+    "CollectionName":  "pxdraw",
     "PreferredLocations": "",
     "Endpoint": "",
     "MasterKey": ""
   },
   "CosmosDBLeases": {
+    "DatabaseName": "pxdraw",
+    "CollectionName": "leases",
     "Endpoint": "",
     "MasterKey": ""
   },
