Removing ChangeFeedProcessor and implementing ChangeFeedReader

--- a/notifications/appsettings.json
+++ b/notifications/appsettings.json
@@ -7,14 +7,8 @@
   },
   "CosmosDB": {
     "DatabaseName": "pxdraw",
-    "CollectionName":  "pxdraw",
+    "CollectionName": "pixels",
     "PreferredLocations": "",
-    "Endpoint": "",
-    "MasterKey": ""
-  },
-  "CosmosDBLeases": {
-    "DatabaseName": "pxdraw",
-    "CollectionName": "leases",
     "Endpoint": "",
     "MasterKey": ""
   },
