--- a/api/pxdraw.api.csproj
+++ b/api/pxdraw.api.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>pxdraw.api</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.9.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
