Implementing ChangeFeedReader as a IHostedServices for isolation

--- a/notifications/PxDRAW.SignalR.csproj
+++ b/notifications/PxDRAW.SignalR.csproj
@@ -6,12 +6,16 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
     <!--
       SA0001: XML comment analysis is disabled due to project configuration
     -->
     <NoWarn>$(NoWarn),SA0001</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
