Switch to latest version of signalR (not jquery plugin)

--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,11 @@
         "knockout": "3.4.2",
         "jquery.panzoom": "3.2.2",
         "jquery.mousewheel": "3.1.9",
-        "signalr": "2.2.3"
+        "@aspnet/signalr": "1.0.0-preview2-final"
     },
     "devDependencies": {
         "@types/jquery": "3.3.1",
         "@types/knockout": "3.4.53",
-        "@types/signalr": "2.2.35",
         "lite-server": "^2.3.0",
         "typescript": "^2.8.1"
     },
