--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
         "jquery": "3.3.1",
         "knockout": "3.4.2",
         "jquery.panzoom": "3.2.2",
-        "jquery.mousewheel": "3.1.9"
+        "jquery.mousewheel": "3.1.9",
+        "@aspnet/signalr": "1.0.0-preview2-final"
     },
     "devDependencies": {
         "@types/jquery": "3.3.1",
