Exposing Interval config

--- a/notifications/appsettings.json
+++ b/notifications/appsettings.json
@@ -8,6 +8,7 @@
   "CosmosDB": {
     "DatabaseName": "pxdraw",
     "CollectionName": "pixels",
+    "PollingInterval": 5,
     "PreferredLocations": "",
     "Endpoint": "",
     "MasterKey": ""
