--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
     "version": "1.0.0",
     "description": "Demo for CosmosDB build",
     "dependencies": {
+        "@aspnet/signalr": "1.0.0-preview2-final",
         "jquery": "3.3.1",
-        "knockout": "3.4.2",
-        "jquery.panzoom": "3.2.2",
         "jquery.mousewheel": "3.1.9",
-        "@aspnet/signalr": "1.0.0-preview2-final"
+        "jquery.panzoom": "3.2.2",
+        "knockout": "3.4.2",
+        "requirejs": "^2.3.5",
+        "webpack": "^4.5.0",
+        "webpack-cli": "^2.0.14"
     },
     "devDependencies": {
         "@types/jquery": "3.3.1",
@@ -18,7 +21,7 @@
     "scripts": {
         "dev": "lite-server",
         "start": "npm run dev",
-        "build": "tsc -p src",
+        "build": "tsc && webpack",
         "clean": "rmdir /q /s built >nul 2>&1"
     }
 }
