--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
         "jquery": "3.3.1",
         "jquery.mousewheel": "3.1.9",
         "jquery.panzoom": "3.2.2",
+        "jquery-ui-dist": "1.12.1",
         "knockout": "3.4.2",
         "requirejs": "^2.3.5",
         "webpack": "^4.5.0",
@@ -15,6 +16,7 @@
     "devDependencies": {
         "@types/jquery": "3.3.1",
         "@types/knockout": "3.4.53",
+        "@types/jqueryui": "1.12.2",
         "lite-server": "^2.3.0",
         "typescript": "^2.8.1"
     },
