--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
     },
     "devDependencies": {
         "@types/jquery": "3.3.1",
-        "@types/knockout": "3.4.53",
         "@types/jqueryui": "1.12.2",
+        "@types/knockout": "3.4.53",
+        "html-webpack-plugin": "^3.2.0",
         "lite-server": "^2.3.0",
         "typescript": "^2.8.1"
     },
