reset to tshirt feature

--- a/updateprocessor/pxdraw.updateprocessor.csproj
+++ b/updateprocessor/pxdraw.updateprocessor.csproj
@@ -12,6 +12,9 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="content\tshirt.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
