Exposing MaxItemCount as a configuration setting

--- a/notifications/appsettings.json
+++ b/notifications/appsettings.json
@@ -9,6 +9,7 @@
     "DatabaseName": "pxdraw",
     "CollectionName": "pixels",
     "PollingInterval": 50,
+    "MaxItemCount": 100,
     "PreferredLocations": "",
     "Endpoint": "",
     "MasterKey": ""
