Changing unit to milliseconds (#35)
* Changing unit to milliseconds

* Defaulting to 50 ms

* Exposing MaxItemCount as a configuration setting

--- a/notifications/appsettings.json
+++ b/notifications/appsettings.json
@@ -8,7 +8,8 @@
   "CosmosDB": {
     "DatabaseName": "pxdraw",
     "CollectionName": "pixels",
-    "PollingInterval": 1,
+    "PollingInterval": 50,
+    "MaxItemCount": 100,
     "PreferredLocations": "",
     "Endpoint": "",
     "MasterKey": ""
